# isxcore

./: .gitignore  CMakeLists.txt  Makefile  README.md  core.pro  isxcore.cmake
api/: Fwd.h  isxAlgorithm.h  isxAssert.h  isxAsync.h  isxAsyncTaskHandle.h  isxAsyncTaskResult.h  isxBehavMovieImporter.h  isxCallOnMainThread.h  isxCellSet.h  isxCellSetExporter.h  isxCellSetFactory.h  isxCellSetUtils.h  isxColor.h  isxCompressedAVI.h  isxConditionVariable.h  isxCore.h  isxCoreFwd.h  isxCsvTraceImporter.h  isxDataSet.h  isxDecompression.h  isxDeltaFoverF.h  isxDispatchQueue.h  isxDispatchQueueWorker.h  isxEvents.h  isxEventsExporter.h  isxException.h  isxExport.h  isxExportTiff.h  isxFileIO.h  isxFileUtils.h  isxGpio.h  isxGpioDataFile.h  isxGpioExporter.h  isxGpioImporter.h  isxGroup.h  isxHistoricalDetails.h  isxIMUFile.h  isxImage.h  isxIndexRange.h  isxInputFileParser.h  (+52 more)
common/: common.pro
common/doc/: Makefile
common/include/: TimeGrid.h  Trace.h
common/src/: TimeGrid.cpp  Trace.cpp
common/test/: test.pro
doc/: make.bat
doc/source/: conf.py  index.rst  specs.rst
docTest/: specs.rst
docTest/specs/: Data.rst  History.rst  Time.rst  (+2 more)
include/: Trace.h  iscpxDateTime.h  iscpxTime.h  iscpxTimeGrid.h  iscpxTrace.h  isxPoint.h  isxTime.h  isxTimeGrid.h  isxTrace.h
jenkins/: JenkinsFile  Jenkinsfile
scripts/: setup  utils.sh
src/: iscpxDateTime.cpp  iscpxTime.cpp  iscpxTimeGrid.cpp  iscpxTrace.cpp  isxAlgorithm.cpp  isxAsyncFrameReader.cpp  isxAsyncFrameReader.h  isxAsyncTask.cpp  isxAsyncTask.h  isxAsyncTaskHandle.cpp  isxBehavMovie.cpp  isxBehavMovie.h  isxBehavMovieFile.cpp  isxBehavMovieFile.h  isxBehavMovieImporter.cpp  isxCallOnMainThread.cpp  isxCellSet.cpp  isxCellSetExporter.cpp  isxCellSetFactory.cpp  isxCellSetFile.cpp  isxCellSetFile.h  isxCellSetSeries.cpp  isxCellSetSeries.h  isxCellSetSimple.cpp  isxCellSetSimple.h  isxCellSetUtils.cpp  isxCompressedAVI.cpp  isxCompressedAVI.h  isxCompressedMovieFile.cpp  isxCompressedMovieFile.h  isxConditionVariable.cpp  isxCore.cpp  isxCsvTraceImporter.cpp  isxDataSet.cpp  isxDecompression.cpp  isxDeltaFoverF.cpp  isxDispatchQueue.cpp  isxDispatchQueue.h  isxDispatchQueueDispatcher.cpp  isxDispatchQueueDispatcher.h  (+152 more)
test/: AlgorithmTest.cpp  AsyncTaskHandleTest.cpp  BehavMovieFileTest.cpp  BehavMovieTest.cpp  CMakeLists.txt  CellSetExportTest.cpp  CellSetFileTest.cpp  CellSetSeriesTest.cpp  CellSetTest.cpp  ColorTest.cpp  ConditionVariableTest.cpp  CoreTest.cpp  CsvTraceImporterTest.cpp  DataSetTest.cpp  DeltaFoverFTest.cpp  DispatchQueueTest.cpp  EventBasedFileV1Test.cpp  EventBasedFileV2Test.cpp  EventsExporterTest.cpp  EventsTest.cpp  ExceptionTest.cpp  GpioDataTest.cpp  GpioExporterTest.cpp  GpioFileTest.cpp  GpioSeriesTest.cpp  GpioTest.cpp  GroupTest.cpp  IMUFileTest.cpp  ImageTest.cpp  IndexRangeTest.cpp  IntegratedBasePlateTest.cpp  IoQueueTest.cpp  JsonUtilsTest.cpp  LogTest.cpp  LogicalTraceTest.cpp  MetadataTest.cpp  MosaicGpioTest.cpp  MosaicMovieFileTest.cpp  MosaicMovieTest.cpp  MosaicMovieTest.h  (+36 more)
(+53 files in other folders)
